2015-08-15 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCast.c,
	  support/regression/tests/array.c:
	  Implement RFE #454 for index[array] access.

2015-08-12 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCC.lex,
	  src/SDCC.y,
	  src/SDCCast.c,
	  src/SDCCerr.h,
	  src/SDCCerr.c,
	  support/regression/tests/generic.c,
	  doc/sdccman.lyx:
	  Implement C11 generic selections.

2015-08-11 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCsymt.c,
	  src/SDCCerr.h,
	  src/SDCCerr.c,
	  support/regression/tests/gcc-torture-execute-920721-3.c,
	  support/regression/tests/gcc-torture-execute-pr34176.c,
	  support/regression/tests/implicit_int.c:
	  Diagnostic for implicit int.

2015-08-10 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph-z80.def:
	  Fix bug #2408.
	* src/z80/peeph-r2k.def,
	* src/z80/peeph-tlcs90.def:
	  Synced with z80 peepholes.

2015-08-09 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph-z80.def:
	  Fix bug #2407 using fix suggested by alvin.

2015-08-02 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Cheaper stm8 division workaround (RFE #449).
	* doc/sdccman.lyx:
	  Update standard compliance documentation to reflect recently implemented feature.

2015-08-01 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCsymt.h,
	  src/SDCCsymt.c,
	  src/SDCCralloc.hpp,
	  src/stm8/gen.c:
	  Static code analysis to omit stm8 division workaround when safe to do so (RFE #448).

2015-07-31 Ben Shi <powerstudio1st AT 163 DOT com>

	* support/regression/tests/gcc-torture-execute-stdarg-5.c:
	  Improve test case.

2015-07-26 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Workaround for for stm8 division hardware bug.

2015-07-13 Ben Shi <powerstudio1st AT 163 DOT com>

	* support/cpp/configure.ac:
	* support/cpp/configure:
	* support/cpp/Makefile.in:
	* Makefile.common.in:
	  Fix small spots.

2015-07-13 Ben Shi <powerstudio1st AT 163 DOT com>

	* sdas/linksrc/lklex.c:
	  Support unicode character in sdld's command line.