@@ -256,6 +256,7 @@ enum {
   E_MULTIPLE_DEFAULT_IN_GENERIC = 227, /* multiple default expressions in generic association */
   E_MULTIPLE_MATCHES_IN_GENERIC = 228, /* multiple matching expressions in generic association */
   E_NO_MATCH_IN_GENERIC         = 229, /* no matching expression in generic association */
+  W_LABEL_WITHOUT_STATEMENT     = 230, /* label without statement, not allowed in standard C */
 
   /* don't touch this! */
   NUMBER_OF_ERROR_MESSAGES             /* Number of error messages */
